--- a/calories/app/src/main/res/layout/calories.xml
+++ b/calories/app/src/main/res/layout/calories.xml
@@ -85,8 +85,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/result"
-             android:onClick="saveProfile"/>
+                android:text="@string/result" />
 
 
 
